# moe-container-manager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.libk2v  Makefile  PKGBUILD  README.md  README.old.md
.github/ISSUE_TEMPLATE/: bug.yaml  bug_report.yaml  config.yml  issue.yaml  q.yaml
.github/workflows/: build-deb.yml  codeql.yml  doc.yml  test.yml
cmake/: folder.cmake  platform.cmake
debian/: README.Debian  build_config.mk  changelog  control  copyright  interface.1  interface.manpages  manpage  moe-container-manager.install  moe-container-manager.manpages  postinst  preinst  prerm  rootfstool.1  rootfstool.manpages  rules  ruri.1  ruri.manpages  watch  yoshinon.1  yoshinon.manpages
debian/upstream/: metadata
doc/: Makefile  requirements.txt
doc/source/: conf.py  faq.md  index.rst  license.rst  terms-of-use.rst
lang/: container-newlang.po
share/: create.sh  group_add.sh  proot_backup.sh  proot_remove.sh  proot_start.sh  run_proot_container.sh  ruri_remove.sh  ruri_start.sh  ruri_stop.sh  unshare_init
share/dev/: help.sh  run_proot_container.sh  shared.sh  show_info.sh
share/functions/: container_cp.sh  create_container.sh  easy_mode.sh  get_cpu_arch.sh  help.sh  manage.sh  po_getmsg.sh  pull_rootfs.sh  remove_image.sh  run_chroot_container.sh  run_container.sh  run_proot_container.sh  show_info.sh
share/shell/: easy_mode.sh  manage.sh  run_chroot_container.sh
src/: CMakeLists.txt  Makefile  container
src/container/: container
src/container-console/: Makefile  main.go  pkc.c
src/interface/: CMakeLists.txt  function.cpp  function.hpp  include.hpp  interface.cmake  interface.hpp  io.cpp  log.cpp  log.hpp  main.cpp  main.hpp  signal.cpp  void.hpp
src/interface/include/: baseheaders.hpp  log  log.hpp
src/interface/src/: function.cpp  interface.cpp  interface.hpp  io.cpp  signal.cpp  signal.hpp
src/libk2v/: .gitignore  CMakeLists.txt  Makefile  README.md
src/libk2v/src/: k2sh.c  k2v.c
src/libk2v/src/include/: k2v.h
src/libk2v/test/: hello.c  hello.conf  test.c  test.conf  test.pl
src/nekoasc/: .clang-format  .gitignore  LICENSE  Makefile  README.md
src/nekoasc/src/: blink.c  input.c  main.c  shared.c  typewriter.c
src/nekoasc/src/include/: nekoasc.h
src/pkc/: CMakeLists.txt  pkc.c  pkc.h
src/rootfstool/: CMakeLists.txt  main.cpp  rootfstool.cmake
src/runlib/: CMakeLists.txt  interface.cpp  runlib.cpp  runlib.hpp  ruri.cpp
src/ruri/: .clang-format  CMakeLists.txt  Makefile  config.h.in  ruri.cmake
src/ruri/.github/workflows/: arm64.yml
src/ruri/debian/: rules
src/ruri/src/: ruri.c
src/ruri/test/: CMakeLists.txt  init-root-test.sh  main.cpp
src/share/: create.sh  proot_remove.sh  proot_start.sh  register.sh  remove.sh  ruri_remove.sh  ruri_start.sh  ruri_stop.sh  share.cmake  start.sh
src/yoshinon/: CMakeLists.txt  Makefile  go.mod  go.sum  yoshinon.cmake
tools/: 0001-Fix-clang.patch  CMakeLists.txt  Makefile  build.sh  c-format.py  clean.pl  installdep.mk  main.l  main.y  makepkg.py  shell-format.py  test.pl
tools/cmake/: debug.cmake  findpackage.cmake  folder.cmake  platform.cmake  setting.cmake
tools/patchs/: use-lld.patch
tools/pkcbuild/: CMakeLists.txt  pkcbuild.c
tools/pkgs/: PKGBUILD  makepkg.py
